add terraform files

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,18 @@
-name: learn-github-actions
+name: 01-Validate-and-Deploy-IaC
 
 on: push
 
 jobs:
-  check-bats-version:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: hashicorp/setup-terraform@v1
         with:
-          node-version: "14"
-      - run: npm install -g bats
-      - run: bats -v
+          terraform_version: 1.1.9
+
+      - name: Validate and check terraform format
+        run: |
+          terraform init -backend=false
+          terraform fmt -check
+          terraform validate
